# amazon_parser

./: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  reinit_env.sh
amazon_parser/: manage.py
amazon_parser/amazon_parser/: asgi.py  settings.py  urls.py  wsgi.py
amazon_parser/core/: admin.py  cache_utils.py  filters.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
amazon_parser/core/migrations/: 0001_initial.py  0002_book_language.py
amazon_parser/core/templates/core/: add_book.html  base.html  book_detail.html  book_list.html  edit_book.html
amazon_parser/core/templatetags/: core_extras.py
