[project]
name = "amazon-kdp-parser"
version = "0.1.0"
description = "A Python parser for Amazon KDP website"
readme = "README.md"
requires-python = "==3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "selenium",
    "beautifulsoup4",
    "pandas",
    "webdriver-manager",
    "lxml",
    "requests>=2.32.3",
    "django>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 88 
